--- a/src/Curacao.Sample.App/View/MainPage.xaml
+++ b/src/Curacao.Sample.App/View/MainPage.xaml
@@ -19,7 +19,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
+        
         <!-- LOCALIZATION NOTE:
             To localize the displayed strings copy their values to appropriately named
             keys in the app's neutral language resource file (AppResources.resx) then
@@ -47,7 +47,7 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-
+            <Button Command="{Binding Go}">Go</Button>
         </Grid>
 
         <!--Uncomment to see an alignment grid to help ensure your controls are
